<resources>
    <string name="app_name">KTS</string>
    <string name="app_full_name">Kayıt Takip Sistemi</string>
    <string name="main_image">main_image</string>
    <string name="search_something">Hadi bir şeyler ara</string>
    <string name="cardImage">card image</string>
    <string name="enterEventName">Etkinlik Adı</string>
    <string name="enterEventDescription">Etkinlik Tanımı</string>
    <string name="enterEventLocation">Etkinlik Lokasyonu</string>
    <string name="start">Tarih : </string>
    <string name="date">01/01/1970</string>
    <string name="time">12:00</string>
    <string name="add">EKLE</string>
    <string name="eventTest">Event Test</string>
    <string name="location">Ayvalı Mah. Gazze Cad. No: 7 Etlik-Keçiören / Ankara</string>
    <string name="description">Oryantasyon</string>
    <string name="no_barcode_detected">QR Kod tespit edilemedi</string>
</resources>
