<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dialogWidth"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/elevation8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin4"
            android:background="@null"
            android:cursorVisible="false"
            android:fontFamily="@font/tokens_normal"
            android:hint="@string/enterEventName"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/padding8"
            android:textSize="@dimen/text16" />

        <EditText
            android:id="@+id/etEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin4"
            android:background="@null"
            android:cursorVisible="false"
            android:fontFamily="@font/tokens_normal"
            android:hint="@string/enterEventDescription"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/padding8"
            android:textSize="@dimen/text16" />

        <EditText
            android:id="@+id/etEventLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin4"
            android:background="@null"
            android:cursorVisible="false"
            android:fontFamily="@font/tokens_normal"
            android:hint="@string/enterEventLocation"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/padding8"
            android:textSize="@dimen/text16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin4"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tokens_normal"
                android:padding="@dimen/padding8"
                android:text="@string/start"
                android:textSize="@dimen/text16" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/tokens_normal"
                android:padding="@dimen/padding8"
                android:text="@string/date"
                android:textSize="@dimen/text16" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/tokens_normal"
                android:padding="@dimen/padding8"
                android:text="@string/time"
                android:textSize="@dimen/text16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin4">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".25" />

            <TextView
                android:id="@+id/tvEventAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:fontFamily="@font/tokens_bold"
                android:padding="@dimen/padding8"
                android:text="@string/add"
                android:textAlignment="center"
                android:textSize="@dimen/text16" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".25" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>